src/test/resources/cocos/valid/imports/reexportImports/NoTransitivImport.sysml
package 'NoTransitivImport' {
  block VehicleDef1;
  block BusDef1;
}