src/test/resources/cocos/invalid/UniqueName/TwoNamesInScope.sysml
package 'TwoNamesInScope' {
  block Car;
  block Car;
}